--- a/_includes/music.liquid
+++ b/_includes/music.liquid
@@ -1,29 +1,29 @@
 <div class="col">
-  <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
+  <a href="{% if music.redirect %}{{ music.redirect }}{% else %}{{ music.url | relative_url }}{% endif %}">
     <div class="card h-100 hoverable">
-      {% if project.img %}
+      {% if music.img %}
         {%
           include figure.liquid
           loading="eager"
-          path=project.img
+          path=music.img
           sizes = "250px"
-          alt="project thumbnail"
+          alt="music thumbnail"
           class="card-img-top"
         %}
       {% endif %}
       <div class="card-body">
-        <h2 class="card-title">{{ project.title }}</h2>
-        <p class="card-text">{{ project.description }}</p>
+        <h2 class="card-title">{{ music.title }}</h2>
+        <p class="card-text">{{ music.description }}</p>
         <div class="row ml-1 mr-1 p-0">
-          {% if project.github %}
+          {% if music.github %}
             <div class="github-icon">
               <div class="icon" data-toggle="tooltip" title="Code Repository">
-                <a href="{{ project.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
+                <a href="{{ music.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
               </div>
-              {% if project.github_stars %}
+              {% if music.github_stars %}
                 <span class="stars" data-toggle="tooltip" title="GitHub Stars">
                   <i class="fa-solid fa-star"></i>
-                  <span id="{{ project.github_stars }}-stars"></span>
+                  <span id="{{ music.github_stars }}-stars"></span>
                 </span>
               {% endif %}
             </div>
