--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -99,8 +99,8 @@ layout: default
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
-                {% when 'projects' %}
-                  {% include resume/projects.liquid %}
+                {% when 'music' %}
+                  {% include resume/music.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
                 {% when 'skills' %}
