--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,10 +47,10 @@ body.sticky-bottom-footer {
 // TODO: redefine publications layout.
 
 /*****************************************************************************
-* Projects
+* Music
 *****************************************************************************/
 
-// TODO: redefine projects layout.
+// TODO: redefine music layout.
 
 /*****************************************************************************
 * Video Games
