Music page video style update
Keep thumbnails on videos and expand to full screen player when clicking
Positioning video popup to be at center of scroll viewport

--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -187,6 +187,9 @@
 <!-- Performance Optimizer -->
 <script defer src="{{ '/assets/js/performance-optimizer.js' | relative_url | bust_file_cache }}"></script>
 
+<!-- Video Duration Loader -->
+<script defer src="{{ '/assets/js/video-duration-loader.js' | relative_url | bust_file_cache }}"></script>
+
 <!-- Jupyter Open External Links New Tab -->
 <script defer src="{{ '/assets/js/jupyter_new_tab.js' | relative_url | bust_file_cache }}"></script>
 
